--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8"><title>First Flask App_weather</title><!-- Latest compiled and minified CSS -->
+    <meta charset="utf-8"><title>Flask App_weather</title><!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css"><!-- jQuery library -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script><!-- Latest compiled JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
@@ -11,7 +11,6 @@
 <div class="col-md-6 col-md-offset-3">
 <h1>Hello {{myname}}</h1>
 <h1>Welcome to HomePage</h1>
-<p>Loading from templates</p>
 <form method="post" action="/">
     <input type="text" name="city" placeholder="Enter city name">
     <button type="submit">Submit</button>
