--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,7 @@
 <body>
 <div class="col-md-6 col-md-offset-3">
 <h1>Hello {{myname}}</h1>
-<h1>Welcome to HomePage</h1>
+<h1>Welcome to Weather_App</h1>
 <form method="post" action="/">
     <input type="text" name="city" placeholder="Enter city name">
     <button type="submit">Submit</button>
